--- a/Progetto AMSC NBody/Progetto AMSC NBody.vcxproj.filters
+++ b/Progetto AMSC NBody/Progetto AMSC NBody.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Vector.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
+    <ClCompile Include="ForceMatrix.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Particle.h">
@@ -36,6 +39,9 @@
       <Filter>File di intestazione</Filter>
     </ClInclude>
     <ClInclude Include="Vector.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="simulation_functions.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
   </ItemGroup>
