Added time costants. Fixed function calls with appropriate times. Partially working, need to investigate odd position patterns.

--- a/Progetto AMSC NBody/Progetto AMSC NBody.vcxproj
+++ b/Progetto AMSC NBody/Progetto AMSC NBody.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="Vector.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Constants.h" />
     <ClInclude Include="ForceMatrix.h" />
     <ClInclude Include="Particle.h" />
     <ClInclude Include="simulation_functions.h" />
