--- a/Progetto AMSC NBody/Progetto AMSC NBody.vcxproj.filters
+++ b/Progetto AMSC NBody/Progetto AMSC NBody.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="Utils.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
+    <ClInclude Include="Constants.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
