Fixed matrix constructor

--- a/Progetto AMSC NBody/Progetto AMSC NBody.vcxproj
+++ b/Progetto AMSC NBody/Progetto AMSC NBody.vcxproj
@@ -159,6 +159,9 @@
     <None Include="fragmentShader.fragmentshader" />
     <None Include="vertexShader.vertexshader" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="CMakeLists.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
