--- a/Progetto AMSC NBody/Progetto AMSC NBody.vcxproj
+++ b/Progetto AMSC NBody/Progetto AMSC NBody.vcxproj
@@ -73,6 +73,9 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LibraryPath>$(SolutionDir)glew\bin\Debug\x64;$(SolutionDir)libs;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <LibraryPath>$(SolutionDir)glew\bin\Debug\x64;$(SolutionDir)libs;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level4</WarningLevel>
@@ -143,7 +146,9 @@
     <ClCompile Include="Controls.cpp" />
     <ClCompile Include="ForceMatrix.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="OpenGLFunctions.cpp" />
     <ClCompile Include="Particle.cpp" />
+    <ClCompile Include="shader.cpp" />
     <ClCompile Include="Utils.cpp" />
     <ClCompile Include="Vector.cpp" />
   </ItemGroup>
@@ -151,7 +156,9 @@
     <ClInclude Include="Constants.h" />
     <ClInclude Include="Controls.h" />
     <ClInclude Include="ForceMatrix.h" />
+    <ClInclude Include="OpenGLFunctions.h" />
     <ClInclude Include="Particle.h" />
+    <ClInclude Include="shader.h" />
     <ClInclude Include="simulation_functions.h" />
     <ClInclude Include="Types.h" />
     <ClInclude Include="Utils.h" />
