--- a/Progetto AMSC NBody/Progetto AMSC NBody.vcxproj.filters
+++ b/Progetto AMSC NBody/Progetto AMSC NBody.vcxproj.filters
@@ -36,13 +36,13 @@
     <ClCompile Include="Utils.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
+    <ClCompile Include="Controls.cpp">
+      <Filter>File di origine\Graphics</Filter>
+    </ClCompile>
     <ClCompile Include="OpenGLFunctions.cpp">
       <Filter>File di origine\Graphics</Filter>
     </ClCompile>
     <ClCompile Include="shader.cpp">
-      <Filter>File di origine\Graphics</Filter>
-    </ClCompile>
-    <ClCompile Include="Controls.cpp">
       <Filter>File di origine\Graphics</Filter>
     </ClCompile>
   </ItemGroup>
@@ -68,13 +68,13 @@
     <ClInclude Include="Constants.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
+    <ClInclude Include="Controls.h">
+      <Filter>File di intestazione\Graphics</Filter>
+    </ClInclude>
     <ClInclude Include="OpenGLFunctions.h">
       <Filter>File di intestazione\Graphics</Filter>
     </ClInclude>
     <ClInclude Include="shader.h">
-      <Filter>File di intestazione\Graphics</Filter>
-    </ClInclude>
-    <ClInclude Include="Controls.h">
       <Filter>File di intestazione\Graphics</Filter>
     </ClInclude>
   </ItemGroup>
@@ -87,9 +87,11 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\Resources\particle.DDS" />
+    <Text Include="CMakeLists.txt" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="CMakeLists.txt" />
+    <Image Include="..\Resources\particle.DDS">
+      <Filter>File di risorse</Filter>
+    </Image>
   </ItemGroup>
 </Project>
