--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 ﻿# CMakeList.txt: file di progetto CMake di primo livello. Eseguire la configurazione globale
 # e includere qui i sottoprogetti.
 #
-cmake_minimum_required (VERSION 3.8)
+cmake_minimum_required (VERSION 3.20)
 
 project ("Progetto AMSC NBody")
 
 # Includere i sottoprogetti.
-add_subdirectory ("CMakeProgettoAMSC")
+add_subdirectory ("Progetto AMSC NBody")
