Hopefully fixed compilation issues

--- a/Progetto AMSC NBody/CMakeLists.txt
+++ b/Progetto AMSC NBody/CMakeLists.txt
@@ -5,3 +5,4 @@ project("Progetto AMSC Nbody")
 add_executable(main main.cpp)
 
 target_include_directories(main PUBLIC .)
+set_property(TARGET main PROPERTY CXX_STANDARD 17)
