--- a/Progetto AMSC NBody/CMakeLists.txt
+++ b/Progetto AMSC NBody/CMakeLists.txt
@@ -6,3 +6,8 @@ add_executable(main main.cpp Profiling.cpp Controls.cpp OpenGLFunctions.cpp shad
 
 target_include_directories(main PUBLIC .)
 set_property(TARGET main PROPERTY CXX_STANDARD 17)
+
+find_package(OpenMP)
+if(OpenMP_CXX_FOUND)
+    target_link_libraries(main PUBLIC OpenMP::OpenMP_CXX)
+endif()
