Tweaked some parameters and compile flags

--- a/Progetto AMSC NBody/CMakeLists.txt
+++ b/Progetto AMSC NBody/CMakeLists.txt
@@ -6,3 +6,11 @@ add_executable(main main.cpp Profiling.cpp Controls.cpp OpenGLFunctions.cpp shad
 
 target_include_directories(main PUBLIC .)
 set_property(TARGET main PROPERTY CXX_STANDARD 17)
+
+if(NOT CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE Release)
+endif()
+
+set(CMAKE_CXX_FLAGS "-Wall -Wextra")
+set(CMAKE_CXX_FLAGS_DEBUG "-g")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3")
