--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "glew"]
 	path = glew
 	url = https://github.com/nigels-com/glew
+[submodule "json"]
+	path = json
+	url = https://github.com/lformaggia/json
