--- a/Progetto AMSC NBody/Progetto AMSC NBody.vcxproj.filters
+++ b/Progetto AMSC NBody/Progetto AMSC NBody.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="Particle.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
+    <ClCompile Include="Visualisation.cpp">
+      <Filter>File di origine\Graphics</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Particle.h">
@@ -82,6 +85,9 @@
     </ClInclude>
     <ClInclude Include="ParticleCluster.h">
       <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="Visualisation.h">
+      <Filter>File di intestazione\Graphics</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
