Testing run before implementing the actual FMM algorithm

--- a/Progetto AMSC NBody/Progetto AMSC NBody.vcxproj.filters
+++ b/Progetto AMSC NBody/Progetto AMSC NBody.vcxproj.filters
@@ -108,5 +108,6 @@
     <None Include="..\Resources\vertexShader.vertexshader">
       <Filter>File di risorse</Filter>
     </None>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
 </Project>
