--- a/Progetto AMSC NBody/Progetto AMSC NBody.vcxproj.filters
+++ b/Progetto AMSC NBody/Progetto AMSC NBody.vcxproj.filters
@@ -109,5 +109,11 @@
       <Filter>File di risorse</Filter>
     </None>
     <None Include="ClassDiagram.cd" />
+    <None Include="..\Resources\simple_fragmentshader.fragmentshader">
+      <Filter>File di risorse</Filter>
+    </None>
+    <None Include="..\Resources\simple_vertexshader.vertexshader">
+      <Filter>File di risorse</Filter>
+    </None>
   </ItemGroup>
 </Project>
